  * mh_make: upgrade Standard-Version (Closes: #641302)
  * mh_make: clean up Debian emails of the form My Name<my.name@provider.com>
    (Closes: #638788)
  * mh_make: fix description in generated maven.rules (Closes: #639637)
  * Fix failing tests in DependenciesSolverTest
  * Run unit tests during the build,
  * d/control: add B-D on libcommons-io-java as it's used by the junit tests.

  [ Damien Raude-Morvan ]
  * maven-packager-utils/src/main/resources/build.xml.vm: package-module ant
    macro is always needed (at least for root module).
  * Follow-up for #589635: avoid creating a file called mvn-build during
    the build.

 -- Damien Raude-Morvan <drazzib@debian.org>  Sun, 08 Jan 2012 14:26:21 +0100

maven-debian-helper (1.4.5) unstable; urgency=low

  * SysInstallMojo: Support "finalName" attribute to override
    expected artifact (conform to Maven standards).
  * SysInstallMojo: Read usj-name, usj-version and no-usj-versionless.
    Closes: #629621.

 -- Damien Raude-Morvan <drazzib@debian.org>  Thu, 01 Sep 2011 22:52:29 +0200

maven-debian-helper (1.4.4) unstable; urgency=low

  [ Ludovic Claude ]
  * Move apt-file, devscripts, subversion from Recommends: to Suggests: as
    they are only required when mh_make is used
  * mh_make: rescan the Maven repository after the user installs a
    required package.

  [ Damien Raude-Morvan ]
  * Upload to unstable (Closes: #637656).
  * mh_make: Update debian/copyright template for latest DEP-5 format.
  * mh_resolve_dependencies: Don't use mvn directly but call to
    DependenciesSolver main (so packages can have a main pom
    in other directory than root).
  * DependenciesSolver: Add new parameters :
    - --non-explore: doesn't explore directories for pom.xml
    - --base-directory: path to root directory of package
  * maven.mk: Send base-directory and non-explore parameters when calling
    mh_resolve_dependencies.
  * Bump Standards-Version to 3.9.2: no changes needed.
