@@ -1,4 +1,1 @@
 /usr/share/java/ant-nodeps.jar
-#foreach ($jar in $buildjars)
-/usr/share/java/${jar}.jar
-#end
