@@ -1,0 +1,79 @@
+<?xml version='1.0' encoding='UTF-8'?>
+<!-- $Id: pom.xml 8185 2009-05-13 15:28:46Z jvanzyl $ -->
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>org.codehaus.plexus</groupId>
+	<artifactId>plexus-component-metadata</artifactId>
+	<version>1.0-beta-3.0.7</version>
+	<packaging>maven-plugin</packaging>
+	<parent>
+		<groupId>org.codehaus.plexus</groupId>
+		<artifactId>plexus-containers</artifactId>
+		<version>debian</version>
+	</parent>
+	<properties>
+		<debian.asm.asm.originalVersion>3.1</debian.asm.asm.originalVersion>
+		<debian.commons-cli.commons-cli.originalVersion>1.0</debian.commons-cli.commons-cli.originalVersion>
+		<debian.org.codehaus.plexus.plexus-cli.originalVersion>1.2</debian.org.codehaus.plexus.plexus-cli.originalVersion>
+		<debian.originalVersion>1.0-beta-3.0.7</debian.originalVersion>
+		<debian.package>libplexus-component-metadata-java</debian.package>
+	</properties>
+	
+	<name>Plexus :: Component Metadata</name>
+	<description>A Maven plugin to generate Plexus descriptors from source tags and class annotations.</description>
+	<dependencies>
+		<dependency>
+			<groupId>org.codehaus.plexus</groupId>
+			<artifactId>plexus-container-default</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.codehaus.plexus</groupId>
+			<artifactId>plexus-component-annotations</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.codehaus.plexus</groupId>
+			<artifactId>plexus-utils</artifactId>
+		</dependency>
+		<!--
+      NOTE: When QDox 1.7 is fuly cooked should update this and consider using it to provide source-level annotation
+      processing (plexus-cdc-anno). But right now its way to buggy. <dependency>
+      <groupId>com.thoughtworks.qdox</groupId> <artifactId>qdox</artifactId> <version>1.7-SNAPSHOT</version>
+      </dependency>
+    -->
+		<dependency>
+			<groupId>com.thoughtworks.qdox</groupId>
+			<artifactId>qdox</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.jdom</groupId>
+			<artifactId>jdom</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.maven</groupId>
+			<artifactId>maven-plugin-api</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.maven</groupId>
+			<artifactId>maven-model</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.maven</groupId>
+			<artifactId>maven-project</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.codehaus.plexus</groupId>
+			<artifactId>plexus-cli</artifactId>
+			<version>debian</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-cli</groupId>
+			<artifactId>commons-cli</artifactId>
+			<version>debian</version>
+		</dependency>
+		<dependency>
+			<groupId>asm</groupId>
+			<artifactId>asm</artifactId>
+			<version>3.x</version>
+		</dependency>
+	</dependencies>
+</project>
