@@ -12,6 +12,7 @@ maven-debian-helper (1.5) UNRELEASED; urgency=low
   * Fix failing tests in DependenciesSolverTest
   * Run unit tests during the build,
   * d/control: add B-D on libcommons-io-java as it's used by the junit tests.
+  * Generate package-doc.poms for Ant builds
 
   [ Damien Raude-Morvan ]
   * maven-packager-utils/src/main/resources/build.xml.vm: package-module ant
